--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -42,7 +42,9 @@ jobs:
         run: cd docs && make
 
       - name: Deploy pages
-        if: github.ref == 'refs/heads/master'  # Only deploy the version merged into the master branch
+        if: |
+          github.repository_owner == 'capytaine' &&
+          github.ref == 'refs/heads/master'   # Only deploy the version merged into the master branch of capytaine/capytaine
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
           folder: ./docs/_build/html/
