--- a/.github/workflows/test_new_commits.yaml
+++ b/.github/workflows/test_new_commits.yaml
@@ -38,16 +38,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+    - name: Set up UV
+      uses: astral-sh/setup-uv@v5
       with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Set up nox
-      uses: wntrblm/nox@2024.04.15
+        enable-cache: true
 
     - name: Run nox session
-      run: nox --force-python ${{ matrix.python-version }} -s build_and_test_on_locked_env
+      run: uvx nox --force-python ${{ matrix.python-version }} -s build_and_test_on_locked_env
 
   compile_fortran:
 
