--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,11 @@ dynamic = ['version']
 
 [project.optional-dependencies]
 optional = [
-  "matplotlib", "joblib>=1.3", "meshio", "pygmsh", "gmsh", "netcdf4", "vtk",
-  # "bemio @ https://github.com/mancellin/bemio/archive/56559c838e0636916669994712473ad7438d23be.zip"
+  "matplotlib", "joblib>=1.3", "meshio", "netcdf4", "vtk",
+]
+more_optional = [  # Other optional dependencies, but might cause issue when testing
+  "bemio @ https://github.com/mancellin/bemio/archive/56559c838e0636916669994712473ad7438d23be.zip",
+  "pygmsh", "gmsh",
 ]
 test = ["pytest", "capytaine[optional]"]
 docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermaid"]
