--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,13 @@ dynamic = ['version']
 
 [project.optional-dependencies]
 optional = [
-  "matplotlib", "joblib>=1.3", "meshio", "netcdf4", "vtk"
-  # "bemio @ https://github.com/mancellin/bemio/archive/56559c838e0636916669994712473ad7438d23be.zip"
+  "matplotlib", "joblib>=1.3", "meshio", "netcdf4", "vtk",
 ]
-test = ["pytest"]
+more_optional = [  # Other optional dependencies, but might cause issue when testing
+  "bemio @ https://github.com/mancellin/bemio/archive/56559c838e0636916669994712473ad7438d23be.zip",
+  "pygmsh", "gmsh",
+]
+test = ["pytest", "capytaine[optional]"]
 docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermaid"]
 
 [dependency-groups]
