--- a/.github/workflows/test_new_commits.yaml
+++ b/.github/workflows/test_new_commits.yaml
@@ -16,7 +16,6 @@ on:
 
 env:
   FORCE_COLOR: 3
-  # Colors for nox
 
 # The following block is meant to cancel the workflow if a newer commit is pushed on the pull request
 # From https://stackoverflow.com/questions/66335225/how-to-cancel-previous-runs-in-the-pr-when-you-push-new-commitsupdate-the-curre
@@ -31,7 +30,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ['3.8', '3.12']
+        python-version: ['38', '312']
 
     steps:
 
@@ -44,7 +43,7 @@ jobs:
         enable-cache: true
 
     - name: Run nox session
-      run: uvx nox --force-python ${{ matrix.python-version }} -s build_and_test_on_locked_env
+      run: just test_in_py${{ matrix.python-version }}_reference_env
 
   compile_fortran:
 
