--- a/.github/workflows/test_new_commits.yaml
+++ b/.github/workflows/test_new_commits.yaml
@@ -24,7 +24,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build_and_test:
+  "build_and_test":
 
     runs-on: ubuntu-latest
 
@@ -37,15 +37,22 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    # - name: Set up Just
+    #   uses: extractions/setup-just@v3
+    #   with:
+    #       just-version: 1.40
+    - name: Set up Just
+      run: sudo apt install -y just
+
     - name: Set up UV
       uses: astral-sh/setup-uv@v5
       with:
         enable-cache: true
 
-    - name: Run nox session
+    - name: Run tests
       run: just test_in_py${{ matrix.python-version }}_reference_env
 
-  compile_fortran:
+  "compile_fortran":
 
     runs-on: ubuntu-latest
 
