--- a/.github/workflows/test_with_latest_dependencies.yaml
+++ b/.github/workflows/test_with_latest_dependencies.yaml
@@ -9,17 +9,12 @@ env:
   FORCE_COLOR: 3
 
 jobs:
-  build_and_test:
+  "test_in_latest_env":
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        python-version: ['3.8', '3.13']
-
     steps:
-
-    - name: Checkout repository and submodules
+    - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Set up UV
@@ -27,5 +22,27 @@ jobs:
       with:
         enable-cache: true
 
-    - name: Run test sessions
-      run: just test_in_latest_env test_in_nightly_env
+    - name: Set up Just
+      run: sudo apt install -y just
+
+    - name: Run tests
+      run: just test_in_latest_env
+
+  "test_in_nightly_env":
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up UV
+      uses: astral-sh/setup-uv@v5
+      with:
+        enable-cache: true
+
+    - name: Set up Just
+      run: sudo apt install -y just
+
+    - name: Run tests
+      run: just test_in_nightly_env
