--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
    "numpy>=1.24; python_version=='3.8'",  # https://github.com/capytaine/capytaine/issues/562
    "scipy",
    "pandas>=1.3",
-   "xarray<=2025.8",
+   "xarray",
    "rich"
 ]
 urls = {homepage = "https://capytaine.org", repository = "https://github.com/capytaine/capytaine"}
