--- a/.github/workflows/test_new_commits.yaml
+++ b/.github/workflows/test_new_commits.yaml
@@ -16,7 +16,6 @@ on:
 
 env:
   FORCE_COLOR: 3
-  # Colors for nox
 
 # The following block is meant to cancel the workflow if a newer commit is pushed on the pull request
 # From https://stackoverflow.com/questions/66335225/how-to-cancel-previous-runs-in-the-pr-when-you-push-new-commitsupdate-the-curre
@@ -25,28 +24,35 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build_and_test:
+  "build_and_test":
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        python-version: ['3.8', '3.12']
+        python-version: ['38', '312']
 
     steps:
 
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    # - name: Set up Just
+    #   uses: extractions/setup-just@v3
+    #   with:
+    #       just-version: 1.40
+    - name: Set up Just
+      run: sudo apt install -y just
+
     - name: Set up UV
       uses: astral-sh/setup-uv@v5
       with:
         enable-cache: true
 
-    - name: Run nox session
-      run: uvx nox --force-python ${{ matrix.python-version }} -s build_and_test_on_locked_env
+    - name: Run tests
+      run: just test_in_py${{ matrix.python-version }}_reference_env
 
-  compile_fortran:
+  "compile_fortran":
 
     runs-on: ubuntu-latest
 
