Fix docs generation.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -28,4 +28,4 @@ test: show
 
 autodoc:
 	rm -rf developer_manual/api/capytaine*.rst
-	sphinx-apidoc -o developer_manual/api/ ../capytaine --separate --doc-project "API documentation"
+	sphinx-apidoc -o developer_manual/api/ ../src/capytaine --separate --doc-project "API documentation"
