Fix Justfile and update build_docs CI

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -31,15 +31,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
+      - name: Set up Just
+        run: sudo apt install -y just
 
-      - name: Install Capytaine and other dependencies
-        run: pip install .[optional,docs]
+      - name: Set up UV
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
 
       - name: Build documentation
-        run: cd docs && make
+        run: just build_docs
 
       - name: Deploy pages
         if: |
