--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ more_optional = [
   "pygmsh", "gmsh",
   # These dependencies are causing issues in CI.
   ]
-docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermaid"]
+docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermaid", "capytaine[optional]"]
 dev =  [{include-group = "docs"}, {include-group = "test"}, {include-group = "more_optional"}]
 editable_install = [
   "meson-python",
