--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
    "numpy>=1.20; python_version>='3.9'",
    "numpy>=1.24; python_version=='3.8'",  # https://github.com/capytaine/capytaine/issues/562
    "scipy",
-   "pandas>=1.3",
+   "pandas>=1.3,<3",
    "xarray",
    "rich"
 ]
@@ -35,7 +35,7 @@ test = ["pytest", "capytaine[optional]"]
 more_optional = [
   "bemio @ https://github.com/mancellin/bemio/archive/56559c838e0636916669994712473ad7438d23be.zip",
   # This optional dependency cannot be with the other because PyPI only accepts
-  # optional dependenceis that are on PyPI.
+  # optional dependencies that are on PyPI.
   "pygmsh", "gmsh",
   # These dependencies are causing issues in CI.
   ]
