--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -15,8 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, macos-13, macos-14, windows-2025]
-            # MacOS<=13 are Intel, while MacOS 14 is Apple Silicon
+        os: [ubuntu-22.04, macos-15-intel, macos-14, windows-2025]
 
     steps:
       - uses: actions/checkout@v4
@@ -29,28 +28,28 @@ jobs:
 
       - name: Build wheels on Ubuntu
         if: matrix.os == 'ubuntu-22.04'
-        uses: pypa/cibuildwheel@v2.21.3
+        uses: pypa/cibuildwheel@v3.2.0
         env:
           CIBW_SKIP: "pp* *i686* *musllinux*"
           # As of Sept 2024, Python 3.13 is troublesome because of lack of Pandas for Python 3.13.
 
-      - name: Build wheels on MacOS Intal
-        if: matrix.os == 'macos-13'
-        uses: pypa/cibuildwheel@v2.21.3
+      - name: Build wheels on MacOS Intel
+        if: matrix.os == 'macos-15-intel'
+        uses: pypa/cibuildwheel@v3.2.0
         env:
           CIBW_SKIP: "pp*"
-          CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=13.0
+          CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=15.0
 
       - name: Build wheels on MacOS ARM
         if: matrix.os == 'macos-14'
-        uses: pypa/cibuildwheel@v2.21.3
+        uses: pypa/cibuildwheel@v3.2.0
         env:
           CIBW_SKIP: "pp*"
           CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=14.0
 
       - name: Build wheels on Windows
         if: matrix.os == 'windows-2025'
-        uses: pypa/cibuildwheel@v2.21.3
+        uses: pypa/cibuildwheel@v3.2.0
         env:
           CIBW_SKIP: "pp* *win32*"
           CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
