--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -8,8 +8,6 @@ on:
   schedule:
     - cron: '6 6 6/16 * *'  # On the 6th and 22nd of each month at 6:06
 
-env:
-  CIBUILDWHEEL: pypa/cibuildwheel@v3.2.0
 
 jobs:
   "build_wheels_on_windows":
@@ -25,7 +23,7 @@ jobs:
           version: '13'
 
       - name: Build wheels
-        uses: $CIBUILDWHEEL
+        uses: pypa/cibuildwheel@v3.2.0
         env:
           CIBW_SKIP: "pp* *win32*"
           CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
@@ -51,7 +49,7 @@ jobs:
           version: '13'
 
       - name: Build wheels on Ubuntu
-        uses: $CIBUILDWHEEL
+        uses: pypa/cibuildwheel@v3.2.0
         env:
           CIBW_SKIP: "pp* *i686* *musllinux*"
 
@@ -76,7 +74,7 @@ jobs:
   #         version: '13'
   #
   #     - name: Build wheels
-  #       uses: $CIBUILDWHEEL
+  #       uses: pypa/cibuildwheel@v3.2.0
   #       env:
   #         CIBW_SKIP: "pp*"
   #         CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=15.0
@@ -99,7 +97,7 @@ jobs:
           version: '13'
 
       - name: Build wheels
-        uses: $CIBUILDWHEEL
+        uses: pypa/cibuildwheel@v3.2.0
         env:
           CIBW_SKIP: "pp*"
           CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=14.0
