--- a/src/capytaine/__about__.py.in
+++ b/src/capytaine/__about__.py.in
@@ -5,11 +5,16 @@ __all__ = ["__title__", "__description__", "__version__", "__author__", "__uri__
 __title__ = "capytaine"
 __description__ = """Python BEM solver for linear potential flow, based on Nemoh"""
 
-__version__ = "2.3.1"
-
 __author__ = "Matthieu Ancellin"
 __uri__ = "https://github.com/capytaine/capytaine"
 __license__ = "GPL-3.0"
+
+__version__ = "@version@"
+
+__build_info__ = {
+    "compiler": "@compiler@ @compiler_version@",
+    "build_time": "@build_time@"
+}
 
 
 if __name__ == "__main__":
